# ats-scan-mini-app-api

./: .env.example  .gitignore  .tool-versions  AGENTS.md  pyproject.toml  skills-lock.json
.cursor/plans/: ats_backend_architecture_a67b1165.plan.md
.cursor/skills/tlc-spec-driven/: .skill-meta.json
.docs/: handoff-scan-architecture-refactor.md
.specs/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.specs/features/ats-scan-worker/: design.md  spec.md  tasks.md
src/: agent.py  app.py  config.py  logger.py  main.py  resume_parser.py
src/ai/: agent.py  resume_parser.py
src/core/: config.py  enums.py  exceptions.py  logger.py  models.py
src/core/services/: scan_service.py
src/db/: engine.py  scan_repository.py
src/infra/db/: engine.py  models.py  scan_repository.py  unit_of_work.py
src/infra/http/: app.py  dependencies.py  exception_handlers.py  routes.py  schemas.py
src/infra/storage/: s3.py
src/infra/webhooks/: client.py
src/scan/: schemas.py
tests/: conftest.py  settings.py
tests/factories/: __init__.py  scan.py
tests/fixtures/: sample_resume.md
tests/http/: start.http
tests/integration/: conftest.py  test_process_scan.py  test_recovery.py  test_scan_repository.py  test_scans_route.py
tests/unit/: test_agent.py  test_cv_preview.py  test_s3.py  test_webhook.py
