[project]
name = "mini-app-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Caio Vital",email = "caiow2001+dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14.5,<4.0.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "langchain (>=1.3.1,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.0.0,<3.0.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "python-multipart (>=0.0.29,<0.0.30)",
    "structlog (>=25.5.0,<26.0.0)",
    "markitdown[docx,pdf] (>=0.1.4,<0.2.0)",
    "boto3 (>=1.35.0,<2.0.0)",
    "httpx (>=0.28.0,<0.29.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mypy = ">=2.1.0,<3.0.0"
black = ">=26.5.1,<27.0.0"
isort = ">=8.0.1,<9.0.0"
factory-boy = "^3.3.3"
types-boto3-s3 = "^1.43.14"

[tool.pytest.ini_options]
pythonpath = ["src", "."]

[tool.mypy]
mypy_path = "src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
